--- a/style.css
+++ b/style.css
@@ -34,19 +34,13 @@ nav a{
     color:black;
     text-decoration: none;
 }
+
 .background{
-    background-image:url(korea_foodstall.jpg);
-    background-position: center;
+    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), 
+    url("korea_foodstall.jpg");
     background-size: cover;
-    position:relative;
-    top:0;
-    right:0;
-    left:0;
-    bottom:0;
     height:500px;
-    width:100%;
-    opacity: 60%;
-    z-index: -1; /*Places background behind other elements*/
+    z-index: -1;
 }
 
 .thumbnail{
@@ -59,13 +53,18 @@ nav a{
     color:white;
     width:250px;
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 50%;
     text-align: center;
     transform: translate(-50%,-50%); /*This makes it centered no matter what view*/
     font-size: x-large;
     padding:50px;
     opacity:0.8;
+}
+.centered{
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .bar{
