--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li:hover{
     text-decoration: underline;
 }
 
-nav a{
+a{
     color:white;
     text-decoration: none;
 }
@@ -35,45 +35,18 @@ nav a{
     text-decoration: none;
 }
 
-.background{
-    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), 
-    url("korea_foodstall.jpg");
-    background-size: cover;
-    height:500px;
-    z-index: -1;
-}
-
 .thumbnail{
     width: 150px;
     height: 150px;
     object-fit: contain /*Keeps image aspect ratio*/
 }
-.text{
-    background-color: black;
-    color:white;
-    width:250px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    transform: translate(-50%,-50%); /*This makes it centered no matter what view*/
-    font-size: x-large;
-    padding:50px;
-    opacity:0.8;
-}
-.centered{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .bar{
     background-color: white;
     display:inline-grid;
     grid-auto-flow: column; /*Forces all to stay in one row*/
     column-gap: 30px;
     width:100%;
-    padding: 0px 30px 30px 30px;
+    padding: 30px;
     overflow:scroll;
 }
 
@@ -147,7 +120,6 @@ h1{
     /*Needed to specify width then set margin to auto to center*/
     width: 300px;
     margin: auto;
-    
 
 }
 footer{
@@ -159,3 +131,30 @@ footer{
     color: white;
     text-align: center;
 }
+
+#parent {
+    background-image: url("korea_foodstall.jpg");
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+  }
+  
+  #overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #content {
+    width: 200px;
+    height: 100px;
+    background-color: rgba(0,0,0,0.9);
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: large;
+  }
