--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ header{
 nav{
     padding:10px;
     background-color: #b4b8a6;
-    height:60px;
+    height:50px;
     position:sticky;
     top:0;
 }
 
 .iconbar{
-    height:50px;
+    height:40px;
     background-color: #b4b8a6;
     padding-right:20px;
 }
@@ -30,6 +30,13 @@ nav{
     width: 150px;
 }
 
+.banner{
+    height:200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
 li{
     display: inline;
     padding: 0px 10px 0px 10px;
@@ -143,7 +150,7 @@ footer{
     bottom:0;
     height:50px;
     width:100%;
-    color: black;
+    color: white;
     text-align: center;
     font-size: small;
 }
