--- a/style.css
+++ b/style.css
@@ -117,14 +117,9 @@ h1{
     width: 300px;
     margin: auto;
 }
+
 @media screen and (max-width: 900px) {
-    .contactform {
-        width: auto;
-    }
-    .container {
-        background-size: contain;
-    }
-  }
+}
   
 footer{
     background-color: #b4b8a6;
@@ -156,15 +151,16 @@ footer li {
     background-size: contain;
 
 }
- /*
- 
+
 #parent {
-    background-image: url("icelandbackground_text.png");
+    background-image: url("icelandbackground.jpg");
     width: auto;
     height: 400px;
     background-size: cover;
+    background-position: center;
 }
 
+/*Adds opacity and centers block in middle*/
 #overlay {
     width: 100%;
     height: 100%;
@@ -173,17 +169,15 @@ footer li {
     justify-content: center;
     align-items: center;
 }
-
   #content {
     width: 300px;
     height: 200px;
-    background-color: #b4b8a6;
+    /*background-color: #b4b8a6;*/
     opacity:1;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: x-large;
-  }*/
+  }
 
 .searchbutton{
     width: 30px;
