testing bar removal

--- a/style.css
+++ b/style.css
@@ -62,15 +62,16 @@ a{
     height: 150px;
     object-fit: contain /*Keeps image aspect ratio*/
 }
+/*
 .bar{
     background-color: white;
     display:inline-grid;
-    grid-auto-flow: column; /*Forces all to stay in one row*/
+    grid-auto-flow: column;
     column-gap: 30px;
     width:100%;
     padding: 30px;
     overflow:scroll;
-}
+}*/
 
 .button{
     background-color: #b4b8a6;
